--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
         <p>計算中...</p>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="/app.js"></script>
+
 </body>
 </html>
